--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "sequelize": "^6.33.0",
-    "sequelize-typescript": "^2.1.5"
+    "sequelize-typescript": "^2.1.5",
+    "web3": "^4.2.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
