--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/core": "^10.2.7",
     "@nestjs/mapped-types": "^2.0.2",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/sequelize": "^10.0.0",
     "@types/dotenv": "^8.2.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
