--- a/pffrontapp/tsconfig.json
+++ b/pffrontapp/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/page.jsx", "app/Views/FormCreate/page.jsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/page.jsx", "app/Views/FormCreate/page.jsx", "redux/features/inmovablesSlice.tx"],
   "exclude": ["node_modules"]
 }
