--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.5.1",
+    "cors": "^2.8.5",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
