--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/page.jsx", "app/Views/FormCreate/page.jsx", "redux/features/inmovablesSlice.tx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/page.jsx", "app/Views/FormCreate/page.jsx", "redux/features/inmovablesSlice.tx", "app/Handlers/validation.js"],
   "exclude": ["node_modules"]
 }
