--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
-    "react-redux": "^8.1.3"
+    "react-redux": "^8.1.3",
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@types/node": "^20",
