--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "",
   "private": true,
   "license": "UNLICENSED",
-   "engines": {
+  "engines": {
     "node": ">=18.18.0 <19.0.0"
   },
   "scripts": {
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.2.7",
+    "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.2.7",
     "@nestjs/mapped-types": "^2.0.2",
     "@nestjs/platform-express": "^10.0.0",
@@ -31,6 +32,7 @@
     "@types/dotenv": "^8.2.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cloudinary": "^1.41.0",
     "dotenv": "^16.3.1",
     "mapped-types": "^0.0.1",
     "pg": "^8.11.3",
@@ -38,6 +40,7 @@
     "rxjs": "^7.8.1",
     "sequelize": "^6.33.0",
     "sequelize-typescript": "^2.1.5",
+    "streamifier": "^0.1.1",
     "web3": "^4.2.0"
   },
   "devDependencies": {
@@ -46,6 +49,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.9",
     "@types/node": "^20.3.1",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
