--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cloudinary": "^1.41.0",
     "dotenv": "^16.3.1",
     "mapped-types": "^0.0.1",
+    "nestjs-stripe": "^1.0.0",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
