--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cloudinary": "^1.41.0",
+    "coinbase": "^2.0.8",
     "dotenv": "^16.3.1",
     "mapped-types": "^0.0.1",
     "nestjs-stripe": "^1.0.0",
