--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
+    "@stripe/stripe-js": "^2.1.10",
     "axios": "^1.5.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^8.1.3",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "stripe": "^14.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
