--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "dependencies": {
     "@nestjs/axios": "^3.0.1",
-    "@nestjs/common": "^10.2.7",
+    "@nestjs/common": "^10.2.8",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.2.7",
     "@nestjs/jwt": "^10.1.1",
@@ -40,7 +40,8 @@
     "coinbase": "^2.0.8",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
-    "mapped-types": "^0.0.1",   
+    "express": "^4.18.2",
+    "mapped-types": "^0.0.1",
     "passport-github": "^1.1.0",
     "passport-google": "^0.3.0",
     "pg": "^8.11.3",
