--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^1.9.1",
     "@nestjs/axios": "^3.0.1",
     "@nestjs/common": "^10.2.8",
     "@nestjs/config": "^3.1.1",
@@ -42,6 +43,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mapped-types": "^0.0.1",
+    "nodemailer": "^6.9.7",
     "passport-github": "^1.1.0",
     "passport-google": "^0.3.0",
     "pg": "^8.11.3",
