--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "cloudinary": "^1.41.0",
     "coinbase": "^2.0.8",
     "cookie-parser": "^1.4.6",
+    "crypto-random-string": "^5.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mapped-types": "^0.0.1",
