--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "js-cookie": "^3.0.5",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
@@ -28,6 +29,7 @@
   },
   "devDependencies": {
     "@types/coinbase-commerce-node": "^1.0.8",
+    "@types/js-cookie": "^3.0.5",
     "@types/node": "^20",
     "@types/react": "^18.2.32",
     "@types/react-dom": "^18.2.14",
