--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.3.1",
     "js-cookie": "^3.0.5",
     "next": "14.0.1",
+    "node": "^21.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
