--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "crypto-random-string": "^5.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "git-branch": "^2.0.1",
     "mapped-types": "^0.0.1",
     "nodemailer": "^6.9.7",
     "passport-github": "^1.1.0",
