feat: (fix and refactor) urls issue

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "git-branch": "^2.0.1",
     "js-cookie": "^3.0.5",
     "next": "14.0.1",
     "node": "^21.1.0",
