--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "git-branch": "^2.0.1",
     "js-cookie": "^3.0.5",
     "next": "14.0.1",
+    "next-auth": "^4.24.5",
     "node": "^21.1.0",
     "react": "^18",
     "react-dom": "^18",
