--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
+    "react-query": "^3.39.3",
     "react-redux": "^8.1.3",
     "redux-thunk": "^2.4.2",
     "stripe": "^14.2.0",
