--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,105 +1,5 @@
 {
-<<<<<<< HEAD
-  "name": "nest-back-boilerplate",
-  "version": "0.0.1",
-  "description": "",
-  "author": "",
-  "private": true,
-  "license": "UNLICENSED",
-  "engines": {
-    "node": ">=18.18.0 <19.0.0"
-  },
-  "scripts": {
-    "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
-  },
-  "dependencies": {
-    "@nestjs-modules/mailer": "^1.9.1",
-    "@nestjs/axios": "^3.0.1",
-    "@nestjs/common": "^10.2.8",
-    "@nestjs/config": "^3.1.1",
-    "@nestjs/core": "^10.2.7",
-    "@nestjs/jwt": "^10.1.1",
-    "@nestjs/mapped-types": "^2.0.2",
-    "@nestjs/passport": "^10.0.2",
-    "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/sequelize": "^10.0.0",
-    "@types/dotenv": "^8.2.0",
-    "bcryptjs": "^2.4.3",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.0",
-    "cloudinary": "^1.41.0",
-    "coinbase": "^2.0.8",
-    "cookie-parser": "^1.4.6",
-    "crypto-random-string": "^5.0.0",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "git-branch": "^2.0.1",
-    "mapped-types": "^0.0.1",
-    "nodemailer": "^6.9.7",
-    "passport-github": "^1.1.0",
-    "passport-google": "^0.3.0",
-    "pg": "^8.11.3",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1",
-    "sequelize": "^6.33.0",
-    "sequelize-typescript": "^2.1.5",
-    "streamifier": "^0.1.1",
-    "stripe": "^14.2.0",
-    "web3": "^4.2.0"
-  },
-  "devDependencies": {
-    "@nestjs/cli": "^10.0.0",
-    "@nestjs/schematics": "^10.0.0",
-    "@nestjs/testing": "^10.0.0",
-    "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.2",
-    "@types/multer": "^1.4.9",
-    "@types/node": "^20.3.1",
-    "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "eslint": "^8.42.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "jest": "^29.7.0",
-    "prettier": "^3.0.0",
-    "source-map-support": "^0.5.21",
-    "supertest": "^6.3.3",
-    "ts-jest": "^29.1.0",
-    "ts-loader": "^9.4.3",
-    "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": "src",
-    "testRegex": ".*\\.spec\\.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
-=======
-  "name": "pffrontapp",
+  "name": "frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -117,12 +17,10 @@
     "axios": "^1.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "git-branch": "^2.0.1",
     "js-cookie": "^3.0.5",
     "next": "14.0.1",
     "next-auth": "^4.24.5",
     "next-client-cookies": "^1.0.6",
-    "node": "^21.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
@@ -130,8 +28,7 @@
     "react-redux": "^8.1.3",
     "redux-thunk": "^2.4.2",
     "stripe": "^14.2.0",
-    "sweetalert2": "^11.9.0",
-    "yarn": "^1.22.19"
+    "sweetalert2": "^11.9.0"
   },
   "devDependencies": {
     "@types/coinbase-commerce-node": "^1.0.8",
@@ -145,6 +42,5 @@
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
     "typescript": "^5"
->>>>>>> frontend/main
   }
 }
