refactor: src/shared/models issue

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -12,9 +12,11 @@
             "dest":"src/main.ts",
             "methods":[
                 "GET",
-                "POST",
+                "HEAD",
+                "PUT",
                 "PATCH",
-                "DELETE"
+                "POST",
+                "DELETE"                
             ]
         }
     ]
