--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -19,5 +19,15 @@
                 "DELETE"
             ]
         }
+    ],
+    "headers": [
+        {
+            "source": "/(.*)",
+            "headers": [
+                { "key": "Access-Control-Allow-Origin", "value": "*" },
+                { "key": "Access-Control-Allow-Methods", "value": "GET,POST,PUT,DELETE,OPTIONS" },
+                { "key": "Access-Control-Allow-Headers", "value": "*" }
+            ]
+        }
     ]
 }
