--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -17,17 +17,13 @@
                 "PATCH",
                 "POST",
                 "DELETE"
-            ]
-        }
-    ],
-    "headers": [
-        {
-            "source": "/(.*)",
-            "headers": [
-                { "key": "Access-Control-Allow-Origin", "value": "*" },
-                { "key": "Access-Control-Allow-Methods", "value": "GET,POST,PUT,DELETE,OPTIONS" },
-                { "key": "Access-Control-Allow-Headers", "value": "*" }
-            ]
+            ],
+            "headers": {
+                "Access-Control-Allow-Credentials": "true",
+                "Access-Control-Allow-Origin": "*",
+                "Access-Control-Allow-Methods": "GET,POST,PUT,DELETE,OPTIONS",
+                "Access-Control-Allow-Headers": "*"
+            }
         }
     ]
 }
